--- a/style.css
+++ b/style.css
@@ -1,5 +1,66 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 40px;
+  padding: 0 30px;
+  padding-top: 30px;
+}
+
+.my-form {
+  display: flex;
+  gap: 20px;
+}
+.table {
+  border-collapse: collapse;
+  width: 100%;
+}
+.table thead tr th {
+  border: 1px solid #d5d5d3;
+  text-align: left;
+  background-color: #2d92d1;
+  color: white;
+  padding: 15px 10px;
+  font-size: 1.3rem;
+}
+
+#sort-name {
+  width: 80%;
+}
+#sort-rate {
+  width: 10%;
+}
+
+.table tbody tr td {
+  border: 1px solid #d5d5d3;
+  padding: 15px 10px;
+  background-color: white;
+}
+
+.table tbody tr:nth-child(odd) td {
+  background-color: #ececea;
+}
+
+.delete-button {
+    background-color: #f80000;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+}
+.delete-button:hover {
+background-color: #d30000;
+}
+.column-table-delete{
+    display: flex;
+    justify-content: center;
 }
